--- a/modularisation.html
+++ b/modularisation.html
@@ -66,7 +66,7 @@
             />
           </li>
           <li>
-            Vote for you favourite submission via
+            Vote for your favourite submission via
             <img
               src="https://emoji.slack-edge.com/T024MJDKT/webcoin/f7921e5bc6cf985b.gif"
               alt="U for real brah?"
