--- a/modularisation.html
+++ b/modularisation.html
@@ -25,7 +25,7 @@
       flex-direction: column;
       text-align: center;
       justify-content: space-between;
-      height: 100vh;
+      height: calc(100vh - 60px);
       width: 100vw;
       padding: 1rem;
       box-sizing: border-box;
