--- a/modularisation.html
+++ b/modularisation.html
@@ -83,7 +83,7 @@
         </ul>
       </article>
     </main>
-    <marquee style="font-style: italic" direction="right" scrollamount="30"
+    <marquee style="font-style: italic" direction="left" scrollamount="24"
       ><h3>
         <img
           src="https://emojis.slackmojis.com/emojis/images/1643514790/8039/eyebrows.gif?1643514790"
