--- a/modularisation.html
+++ b/modularisation.html
@@ -15,7 +15,14 @@
         box-sizing: border-box;
       }
     </style>
-    <title>Klemensas</title>
+    <title>Modularisation?</title>
+    <script>
+      setTimeout(() => {
+        document.body.style.color = 'white';
+        document.body.style.textShadow = 'black 0 0 4px';
+        document.body.style.backgroundImage = 'url(https://emojis.slackmojis.com/emojis/images/1643514790/8039/eyebrows.gif?1643514790)';
+      }, 20000)
+    </script>
   </head>
   <body
     style="
